--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 
 <head>
     <meta charset="UTF-8">
@@ -16,16 +16,41 @@
                 <li><a href="#"></a>Портфоліо</li>
                 <li><a href="#"></a>Контакти</li>
             </ul>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </nav>
-
-
     </header>
+    
     <main>
+        <!-- Hero -->
         <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button>Замовити послугу</button>
+        </section>
+
+        <!-- Benefits -->
+        <section>
+            <h2 hidden>Наші переваги</h2>
+            <ul>
+                <li>
+                    <h3>Увага до деталей</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальність</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>Планування</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>Сучасні технології</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+
+
 
         </section>
 
