--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </nav>
     </header>
-    
+
     <main>
         <!-- Hero -->
         <section>
@@ -49,16 +49,61 @@
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-
-
-
         </section>
 
-        <section></section>
+        <!-- Gallery-Work-->
+        <section>
+            <h2>Чим займаємось</h2>
+            <ul>
+                <li><img src="./img/gallery-work-img1.jpg" alt="Верстання сайту" width="370px" height="294px"></li>
+                <li><img src="./img/gallery-work-img2.jpg" alt="Створення дизайну" width="370px" height="294px"></li>
+                <li><img src="./img/gallery-work-img3.jpg" alt="Вибір гамми кольорів" width="370px" height="294px"></li>
+            </ul>
+        </section>
 
-        <section></section>
+        <!-- Stuff -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./img/gallery-staff-img1.jpg" alt="Мужчина 30 років з бородою та в окулярах в сорочці"
+                        width="270 px" height="260 px">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p lang="en">Product Designe</p>
+                </li>
+                <li>
+                    <img src="./img/gallery-staff-img2.jpg" alt="Дівчина 25 років білявка" width="270 px"
+                        height="260 px">
+                    <h3>Ольга Рєпіна</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./img/gallery-staff-img3.jpg" alt="Мужчина 30 років в рубашці" width="270 px"
+                        height="260 px">
+                    <h3>Микола Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./img/gallery-staff-img4.jpg" alt="Мужчина 30 років з бородою та в окулярах в футболці"
+                        width="270 px" height="260 px">
+                    <h3>Михайло Єрмаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
-    <footer></footer>
+
+    <footer>
+        <a href=""><span>Web</span>Studio</a>
+        <!-- Contacts -->
+        <ul>
+            <li><a
+                    href="https://www.google.com/search?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&oq=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABNIBCDQzOTVqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
+                    м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
