--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <section>
             <h2>Чим займаємось</h2>
             <ul>
-                <li><img src="./img/gallery-work-img1.jpg" alt="Верстання сайту" width="370px" height="294px"></li>
-                <li><img src="./img/gallery-work-img2.jpg" alt="Створення дизайну" width="370px" height="294px"></li>
-                <li><img src="./img/gallery-work-img3.jpg" alt="Вибір гамми кольорів" width="370px" height="294px"></li>
+                <li><img src="./img/gallery-work-img1.jpg" alt="Верстання сайту" width="370" height="294"></li>
+                <li><img src="./img/gallery-work-img2.jpg" alt="Створення дизайну" width="370" height="294"></li>
+                <li><img src="./img/gallery-work-img3.jpg" alt="Вибір гамми кольорів" width="370" height="294"></li>
             </ul>
         </section>
 
@@ -67,25 +67,23 @@
             <ul>
                 <li>
                     <img src="./img/gallery-staff-img1.jpg" alt="Мужчина 30 років з бородою та в окулярах в сорочці"
-                        width="270 px" height="260 px">
+                        width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designe</p>
                 </li>
                 <li>
-                    <img src="./img/gallery-staff-img2.jpg" alt="Дівчина 25 років білявка" width="270 px"
-                        height="260 px">
+                    <img src="./img/gallery-staff-img2.jpg" alt="Дівчина 25 років білявка" width="270" height="260">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/gallery-staff-img3.jpg" alt="Мужчина 30 років в рубашці" width="270 px"
-                        height="260 px">
+                    <img src="./img/gallery-staff-img3.jpg" alt="Мужчина 30 років в рубашці" width="270" height="260">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./img/gallery-staff-img4.jpg" alt="Мужчина 30 років з бородою та в окулярах в футболці"
-                        width="270 px" height="260 px">
+                        width="270" height="260">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
