--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href=""><span>Web</span>Studio</a>
+            <a href="" lang="en"><span>Web</span>Studio</a>
             <ul>
                 <li><a href="#"></a>Студія</li>
                 <li><a href="#"></a>Портфоліо</li>
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <a href=""><span>Web</span>Studio</a>
+        <a href="" lang="en"><span>Web</span>Studio</a>
         <!-- Contacts -->
         <ul>
             <li><a
