--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
                 <li><a href="#"></a>Портфоліо</li>
                 <li><a href="#"></a>Контакти</li>
             </ul>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </nav>
+        <a href="mailto:info@devstudio.com" target="_blank" rel="ncopener noreferrer">
+            info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+
     </header>
 
     <main>
         <!-- Hero -->
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button>Замовити послугу</button>
+            <button type="button">Замовити послугу</button>
         </section>
 
         <!-- Benefits -->
@@ -55,9 +57,15 @@
         <section>
             <h2>Чим займаємось</h2>
             <ul>
-                <li><img src="./img/gallery-work-img1.jpg" alt="Верстання сайту" width="370" height="294"></li>
-                <li><img src="./img/gallery-work-img2.jpg" alt="Створення дизайну" width="370" height="294"></li>
-                <li><img src="./img/gallery-work-img3.jpg" alt="Вибір гамми кольорів" width="370" height="294"></li>
+                <li>
+                    <img src="./img/gallery-work-img1.jpg" alt="Верстання сайту" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./img/gallery-work-img2.jpg" alt="Створення дизайну" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./img/gallery-work-img3.jpg" alt="Вибір гамми кольорів" width="370" height="294">
+                </li>
             </ul>
         </section>
 
@@ -94,13 +102,21 @@
     <footer>
         <a href="" lang="en"><span>Web</span>Studio</a>
         <!-- Contacts -->
-        <ul>
-            <li><a
-                    href="https://www.google.com/search?q=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&oq=%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8%2C+26&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABNIBCDQzOTVqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">
-                    м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://goo.gl/maps/WQckrfuPMcQ8v2an9" target="_blank" rel="ncopener noreferrer">
+                        м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com" target="_blank" rel="ncopener noreferrer">
+                        info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
 
