--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
         <nav>
             <a href="" lang="en"><span>Web</span>Studio</a>
             <ul>
-                <li><a href="#"></a>Студія</li>
-                <li><a href="#"></a>Портфоліо</li>
-                <li><a href="#"></a>Контакти</li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com" target="_blank" rel="ncopener noreferrer">
-            info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>    
     </header>
 
     <main>
@@ -109,7 +113,7 @@
                         м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com" target="_blank" rel="ncopener noreferrer">
+                    <a href="mailto:info@devstudio.com">
                         info@devstudio.com</a>
                 </li>
                 <li>
